Rename all `job` related sensors
The following sensors have been renamed

| Old Name                                       | New Name                         |
| ---------------------------------------------- | -------------------------------- |
| Project In Progress                            | Job In Progress                  |
| Project Complete                               | Job Complete                     |
| Project Failed                                 | Job Failed                       |
| Project Paused                                 | Job Paused                       |
| Project Image Preview                          | Job Preview                      |
| Project Name                                   | Job Name                         |
| Project Progress %                             | Job Progress %                   |
| Project Time Elapsed                           | Job Time Elapsed                 |
| Project Time Remaining                         | Job Time Remaining               |
| Print State                                    | Job State                        |
| Approximate Completion Time                    | Job ETA                          |
| Current Layer                                  | Job Current Layer                |
| Total Layers                                   | Job Total Layers                 |
| Print Speed Mode                               | Job Speed Mode                   |
| Z Thickness                                    | Job Z Thickness                  |
| Print Model Height                             | Job Model Height                 |
| Print Anti Alias                               | Job Anti Alias                   |
| Print On Time                                  | Job On Time                      |
| Print Off Time                                 | Job Off Time                     |
| Print Bottom Time                              | Job Bottom Time                  |
| Print Bottom Layers             

--- a/custom_components/anycubic_cloud/frontend_panel/localize/languages/en.json
+++ b/custom_components/anycubic_cloud/frontend_panel/localize/languages/en.json
@@ -81,11 +81,11 @@
             "target_hotbed_temp": {
               "heading": "Target Hotbed Temperature"
             },
-            "print_state": {
-              "heading": "Project State"
+            "job_state": {
+              "heading": "Job State"
             },
-            "project_progress": {
-              "heading": "Project Progress"
+            "job_progress": {
+              "heading": "Job Progress"
             },
             "ace_fw_version": {
               "heading": "ACE FW Version"
