--- a/custom_components/anycubic_cloud/frontend_panel/localize/languages/en.json
+++ b/custom_components/anycubic_cloud/frontend_panel/localize/languages/en.json
@@ -15,10 +15,7 @@
     "buttons": {
       "print_settings": "Print Settings",
       "dry": "Dry",
-      "runout_refill": "Refill",
-      "preset": "Preset",
-      "stop_drying": "Stop Drying",
-      "minutes": "Mins"
+      "runout_refill": "Refill"
     },
     "configure": {
       "tabs": {
