Disable file manager in frontend for web auth

--- a/custom_components/anycubic_cloud/frontend_panel/localize/languages/en.json
+++ b/custom_components/anycubic_cloud/frontend_panel/localize/languages/en.json
@@ -9,6 +9,9 @@
       "yes": "Yes",
       "no": "No",
       "save": "Save"
+    },
+    "messages": {
+      "mqtt_unsupported": "This feature requires MQTT to retrieve data but unfortunately MQTT is not supported with the configured authentication mode."
     }
   },
   "card": {
